--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,9 @@ img{
     padding-top: 120px;
     padding-bottom: 120px;
 }
-.header {}
+.header {
+    border-bottom: 1px solid #e7e9fc;
+}
 
 .header-container{
     display: flex;
@@ -40,6 +42,7 @@ img{
 }
 .navigation {
     display: flex;
+    align-items: center;
 }
 
 .link-logo {
@@ -50,8 +53,9 @@ img{
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
-        margin-right: 100px;
-        padding: 24px;
+        margin-right: 76px;
+        padding-top: 24px;
+        padding-bottom: 24px;
 }
 
 .text-logo{
@@ -79,6 +83,8 @@ img{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 .navigation-link:hover{
     color: #404bbf;
@@ -89,6 +95,7 @@ img{
 .contacts {
     font-style: normal;
     margin-left: auto;
+    align-items: center;
 }
 
 .contacts-list {
@@ -104,6 +111,8 @@ img{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 .contacts-link:hover{
     color: #404bbf;
@@ -114,8 +123,8 @@ img{
 /*-----------------------Section-first----------------*/
 .section-first {
     background: #2e2f42;
-
-
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 
 .page-title {
@@ -133,7 +142,7 @@ img{
 }
 
 .button-service{
-    display: flex;
+    display: block;
     background-color: #4D5AE5;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
@@ -145,6 +154,9 @@ img{
     border-radius: 4px;
     padding: 16px 32px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    min-width: 169px;
+    height: 56px;
+    border: none;
     margin-left: auto;
     margin-right: auto;
 }
@@ -162,6 +174,12 @@ img{
 .section-quality {}
 
 .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
     white-space: nowrap;
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
@@ -219,6 +237,7 @@ img{
 .team-item {
     background-color: #FFFFFF;
     width: calc((100% - 3 * 24px)/ 4);
+    border-radius: 0px 0px 4px 4px;
     
 }
 
@@ -235,7 +254,10 @@ img{
         margin-bottom: 8px;
 }
 .team-container{
-    padding: 32px 16px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    padding-left: 16px;
+    padding-right: 16px;
 
 }
 .team-text {
@@ -271,9 +293,8 @@ img{
     column-gap: 24px;
 }
 .portfolio-container{
-    padding-top: 32px;
-    padding-bottom: 32px;
-    padding-left: 16px;
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
 }
 .portfolio-item {
     flex-basis: calc((100% - 2 * 24px) / 3);
@@ -302,6 +323,9 @@ img{
 /*---------------------------Footer-------------------*/
 .footer {
     background: #2e2f42;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 156px;
 }
 
 .footer-link {
@@ -312,13 +336,11 @@ img{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;;
+    display: inline-block;
+    margin-bottom: 16px;
 
 }
-.container-footer{
-    padding-top: 100px;
-    padding-bottom: 100px;
-    padding-left: 156px;
-}
+
 .footer-logo{
     font-family: "Raleway", sans-serif;
         font-weight: 700;
@@ -337,5 +359,4 @@ img{
         letter-spacing: 0.02em;
         color: #f4f4fd;
         width: 264px;
-        margin-top: 16px;
 }
