--- a/css/styles.css
+++ b/css/styles.css
@@ -295,6 +295,7 @@ img{
 .portfolio-container{
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
+    border-top: none;
 }
 .portfolio-item {
     flex-basis: calc((100% - 2 * 24px) / 3);
