--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,6 @@ img{
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    max-width: 162px;
     margin: 0 auto 72px auto;
 }
 
@@ -254,10 +253,7 @@ img{
         margin-bottom: 8px;
 }
 .team-container{
-    padding-top: 32px;
-    padding-bottom: 32px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 32px 0;
 
 }
 .team-text {
@@ -280,7 +276,6 @@ img{
         text-align: center;
         color: #2e2f42;
         text-transform: capitalize;
-        max-width: 218px;
         margin-bottom: 72px;
         margin-left: auto;
         margin-right: auto;
@@ -326,7 +321,6 @@ img{
     background: #2e2f42;
     padding-top: 100px;
     padding-bottom: 100px;
-    padding-left: 156px;
 }
 
 .footer-link {
